--- a/src/components/AboutMe/style.css
+++ b/src/components/AboutMe/style.css
@@ -2,7 +2,10 @@
     position: relative;
     overflow: hidden;
     width: 20rem;
-    height: 20rem;     
+    height: 20rem;
+    border-radius: 100%;
+    border-style: solid;
+    border-width: 5px;
 }
 
 #slide {
